<resources>
    <string name="app_name">My Application</string>
    <string name="calcular">Calcular</string>
    <string name="set_variavel_x">set variável x</string>
    <string name="set_variavel_y">set variável y</string>
    <string name="variavel_x">Variável X:</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="variavel_y">Variável Y:</string>
    <string name="soma">Soma:</string>
    <string name="resultado">Resultado</string>
    <string name="calculando">calculando</string>
    <string name="labelvariavel">LabelVariavel</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
</resources>